--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
 *{
 	box-sizing: border-box;
 }
+html, body {
+  background: orange;
+  font-family: Courier, arial, sans-serif;
+  margin: 0;
+}
+
+.wrapper{
+	background: white;
+	width: 900px;
+	margin: 2rem auto;
+}
+
+h1{
+	font-weight: bold;
+	font-size: 32px;
+	text-align: center;
+}
+
+.row{
+	display: flex;
+}
+
+img{
+	width: 100%;
+}
+
+.animals{
+	margin: 0 10px;
+}
